@@ -36,7 +36,7 @@
   "definitions/types/ongoingEffectTypes.json" : -2245878883697869623,
   "definitions/types/overlapTypes.json" : -4307203000983488310,
   "definitions/types/particleTypes.json" : 4439991553176063342,
-  "definitions/types/plantSpecies.json" : -147220568349848335,
+  "definitions/types/plantSpecies.json" : 4278820554825260919,
   "definitions/types/professions.json" : 5093983499392062674,
   "definitions/types/races.json" : 958387199456008435,
   "definitions/types/roomTypes.json" : 1594665390665643069,
