@@ -4,6 +4,7 @@
   "materialName": "Berserker Mushroom",
   "maxGrowthSpeedVariance": 0.03,
   "occurenceWeight": 0.2,
+  "ignoresMoisture": true,
   "defaultColors": {
     "BRANCHES_COLOR": {
       "colorCode": "#fcf2f0"
