@@ -4,6 +4,7 @@
   "materialName": "Elfsbane Mushroom",
   "maxGrowthSpeedVariance": 0.03,
   "occurenceWeight": 0.4,
+  "ignoresMoisture": true,
   "defaultColors": {
     "BRANCHES_COLOR": {
       "colorCode": "#f4f2bb"
