@@ -4,6 +4,7 @@
   "materialName": "Glow Mushroom",
   "maxGrowthSpeedVariance": 0.03,
   "occurenceWeight": 0.2,
+  "ignoresMoisture": true,
   "defaultColors": {
     "BRANCHES_COLOR": {
       "transitionSwatch": "rainbow-transition-swatch.png"
