@@ -4,6 +4,7 @@
   "materialName": "Miltonia Mushroom",
   "maxGrowthSpeedVariance": 0.03,
   "occurenceWeight": 0.3,
+  "ignoresMoisture": true,
   "defaultColors": {
     "BRANCHES_COLOR": {
       "colorCode": "#185BBF"
