@@ -2,6 +2,9 @@ Alpha 8.1
 
 - Added elephants as a wild animal (beware their great strength!)
 - The player's first settlement (before they're asked about the tutorial) will now auto-select a start location
+- Settlers can now free themselves from being stuck under furniture while in a corner
+- Creatures now wake up when attacked
+- Mushrooms no longer say that they care about being watered
 
 Alpha 8.0.2 - 18th November 2021
 
